--- a/templates/menus.liquid
+++ b/templates/menus.liquid
@@ -1,36 +1,36 @@
 <section class="page-header page-header--menus">
   <div class="wrapper">
     <header class="section__header page-header__header">
-      <h1 class="section__title section_title--allMenus page-header__title">{{ "Notre carte" | t }}</h1>
+      <h1 class="section__title page-header__title">{{ "Notre carte" | t }}</h1>
     </header>
   </div>
 </section>
 
 <section class="menus">
   <div class="wrapper">
-    <hr class="menus__separator">
     {% for menu in menus %}
       <header class="section__header">
-        <h2 class="section__title section_title--allMenus">
+        <h2 class="section__title">
           <a class="menus__menu-link" href="{{ menu.url }}">{{ menu.name }}</a>
         </h2>
       </header>
       <main class="section__main">
-        <ol class="menus__children">
+        <ul class="menu-children">
           {% for child in menu.children %}
-            <li class="menus__child">
-              <a class="menus__child-link" href="{{ menu.url }}#menu-{{child.id}}">
-                {% if child.main_image? %}
-                  <div class="menus-thumbnail menus-thumbnail--all">
-                    {{ child.main_image | custom_image_url: "100x100#" | image_tag }}
-                  </div>
-                {% endif %}
-                {{ child.name }}
+            <li class="menu-child">
+              <a href="#menu-{{child.id}}" class="menu-child__link">
+                {{ child.main_image | custom_image_url: "100x100#" | image_tag: "class:menu-child__image" }}
+                <span class="menu-child__title">{{ child.name}}</span>
               </a>
             </li>
           {% endfor %}
-        </ol>
+        </ul>
       </main>
+      <footer class="section__main menus__footer">
+        <p>
+          <a class="button" href="{{ menu.url }}">{{ "Voir les plats" | t }}</a>
+        </p>
+      </footer>
       <hr class="menus__separator">
     {% endfor %}
   </div>
