--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -1,14 +1,16 @@
 <!doctype html>
 <html lang="{{ current_locale }}">
   <head>
+    <meta charset="utf-8">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+    <meta http-equiv="cleartype" content="on">
+    
     {% title_tag %}
     {% meta_description_tag %}
 
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ restaurant.host | url_canonical | canonical_tag }}
-
     {{ 'application.css' | asset_url | stylesheet_tag }}
     {% if theme_settings.google-fonts-link %}
       {{ theme_settings.google-fonts-link | replace:'http:','https:' }}
@@ -58,5 +60,7 @@
         {% include 'footer' %}
       </footer>
     </section>
+
+    {{ 'jquery-2.1.1.min.js' | javascript_tag }}
   </body>
 </html>
