--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -888,6 +888,7 @@ body {
 
 .page {
   @extend .clearfix;
+  position: relative;
 }
 
 .main-header {
@@ -938,55 +939,109 @@ body {
       }
 
 .main-nav {
-  @include clearfix();
-  background-color: scale-color($body-color, $lightness: +95%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 3;
 }
-  .main-nav__items {
-    margin: 0;
+.main-nav__toggle {
+  display: none;
+  width: 3.125em;
+  height: 3.125em;
+  text-align: left;
+  text-indent: -9999px;
+  background-color: $accent-color;
+  position: relative;
+  &:before,
+  &:after {
+    position: absolute;
+    border: 2px solid #fff;
+    top: 35%;
+    left: 25%;
+    right: 25%;
+    content: '';
   }
-    .main-nav__item {
-      border-bottom: 1px solid $body-background;
-      margin: 0;
-      position: relative;
+  &:after {
+    top: 60%;
+  }
+}
+.main-nav:not(:target) .toggle--open,
+.main-nav:target .toggle--close {
+  display: block;
+}
+.main-nav__items {
+  height: auto;
+  display: none;
+  background-color: $accent-color;
+}
+  .main-nav:target .main-nav__items {
+    display: block;
+    width: 100%;
+  }
+  .main-nav__item {
+    &:not(:last-child) {
+      border-bottom: 1px solid scale-color($accent-color, $lightness: +25%);
     }
-      .main-nav__link {
-        color: $body-color;
-        display: block;
-        font-size: 1em;
-        padding: .25em;
-        text-align: center;
-        text-decoration: none;
-        &:hover, &:focus {
-          color: #fff;
-          background-color: $accent-color;
-        }
-      }
-  .main-nav__languages {
+    display: block;
     margin: 0;
   }
-    .main-nav__language {
-      margin: 0;
+  .main-nav__item--current {
+    background-color: scale-color($accent-color, $lightness: -15%);
+  }
+    .main-nav__link {
+      color: #fff;
+      display: block;
+      height: auto;
+      padding: 0.75em 1em;
+      font-weight: 700;
+      text-decoration: none;
+      &:hover, &:focus {
+        background-color: scale-color($accent-color, $lightness: -15%);
+      }
+      &:active {
+        background-color: scale-color($accent-color, $lightness: -30%);
+      }
     }
 
+  .has-sub-nav {
+    span:after {
+      width: 0;
+      height: 0;
+      border: 0.313em solid transparent;
+      border-bottom: none;
+      border-top-color: scale-color($accent-color, $lightness: +50%);
+      content: '';
+      vertical-align: middle;
+      display: inline-block;
+      position: relative;
+      right: -0.313em;
+    }
+    &:hover > .main-sub-nav__items {
+      display: block;
+    }
+  }
+
 .main-sub-nav__items {
-  background-color: scale-color($body-color, $lightness: +85%);
+  background-color: scale-color($accent-color, $lightness: -10%);
   display: none;
-  margin: 0;
-  opacity: 0;
-  padding: 0;
-  visibility: hidden;
+  margin-bottom: 0;
 }
-.main-sub-nav__item {
-  @extend .main-nav__item;
-}
-.main-sub-nav__link{
-  @extend .main-nav__link;
-}
-.main-nav__item:hover .main-sub-nav__items {
-  display: block;
-  opacity: 1;
-  visibility: visible;
-}
+  .main-sub-nav__item {
+    @extend .main-nav__item;
+    &:not(:last-child) {
+      border-bottom: 1px solid scale-color($accent-color, $lightness: +5%);
+    }
+  }
+  .main-sub-nav__item--current {
+    background-color: scale-color($accent-color, $lightness: -15%);
+  }
+    .main-sub-nav__link {
+      @extend .main-nav__link;
+      font-weight: 400;
+      padding-left: 1.5em;
+    }
+
 
 .main-content {
   margin-bottom: 1em;
@@ -1136,40 +1191,6 @@ legend {
 // ===========================================================================
 // #Modules
 // ===========================================================================
-.page-header {
-  padding: 1em 0;
-}
-  .page-header__header {
-  }
-    .page-header__title {
-    }
-    .page-header__description {
-      p {
-        font-size: 1.2em;
-      }
-    }
-  .page-body {
-    ol, ul, dl {
-      margin-left: 2em;
-    }
-    ul {
-      list-style: disc;
-    }
-    img {
-      max-width: 100% !important;
-      height: auto !important;
-    }
-    a {
-      border-bottom: 1px solid scale-color($accent-color, $lightness: +75%);
-      color: $accent-color;
-      text-decoration: none;
-      &:hover, &:focus {
-        color: #000;
-        border-bottom-color: #000;
-      }
-    }
-  }
-
 // Home
 .restaurant-main-image {
   {% if restaurant.main_image? %}
@@ -1648,6 +1669,13 @@ x:-o-prefocus, .lb-overlay img {
     text-align: left;
     padding-top: 1em;
   }
+
+  .gallery__item {
+    display: inline-block;
+    vertical-align: top;
+    width: 45%;
+    margin: 2%;
+  }
 }
 
 // Large
@@ -1658,12 +1686,6 @@ x:-o-prefocus, .lb-overlay img {
   select {
     font-size: 125%;
   }
-  .main-nav-wrapper {
-    @include clearfix();
-    max-width: $siteWidth;
-    margin: 0 auto;
-    padding: 0 $gutter;
-  }
   .logo {
     width: 100px;
     margin: 1em 1em 1em 0;
@@ -1673,42 +1695,46 @@ x:-o-prefocus, .lb-overlay img {
     margin: 1.45em 0;
     text-align: right;
   }
-  .main-nav__items {
-    margin: 0;
-    text-align: left;
-  }
-    .main-nav__item {
-      display: inline-block;
-      font-size: 1rem;
-    }
-      .main-nav__link {
-        font-size: 1rem;
-      }
-  .main-nav__languages {
+
+  .main-nav {
+    position: relative;
     text-align: center;
   }
-    .main-nav__language {
-      display: inline-block;
-      font-size: 1rem;
-      text-align: right;
+    .main-nav__toggle {
+      display: none !important;
     }
-
-  .main-sub-nav__items {
-    position: absolute;
-    left: 0;
+    .main-nav__items {
+      display: block;
+    }
+      .main-nav__item {
+        display: inline-block;
+      }
+        .main-nav__link {
+          display: inline-block;
+        }
+      .main-sub-nav__items {
+        position: absolute;
+      }
+        .main-sub-nav__item {
+          display: block;
+          text-align: left;
+        }
+          .main-sub-nav__link {
+            display: block;
+            padding-left: 1em;
+          }
+  
+  .gallery__item {
+    width: 30%;
+    margin: 1%;
   }
-
-  /**
- * Pure CSS Lightbox
- * @see http://tympanus.net/codrops/2011/12/26/css3-lightbox/
- */
-.lb-overlay a.lb-close{
-  top: 45px;
-}
-.lb-overlay:target {
-  width: auto;
-  padding: 80px 100px 120px 100px;
-}
+  .lb-overlay a.lb-close{
+    top: 45px;
+  }
+  .lb-overlay:target {
+    width: auto;
+    padding: 80px 100px 120px 100px;
+  }
 }
 
 // > Large
