--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -12,7 +12,7 @@
           {% newsletter_subscribe_form %}
             <fieldset class="field-group">
               <div class="input">
-                <label class="subscribe__label" for="subscriberEmail">{{ "Entrez votre email pour recevoir notre newsletter :" | t }}</label>
+                <label class="subscribe__label" for="subscriberEmail">{{ "Entrez votre email pour recevoir notre newsletter&nbsp;:" | t }}</label>
                 <input id="subscriberEmail" name="subscriber[email]" type="email" required>
               </div>
               <div class="submit">
