--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -22,32 +22,32 @@
     <section class="page" id="top">
       <header class="main-header">
         <div class="wrapper">
-          <div class="grid">
-            <div class="grid-item large--two-thirds">
-              {% if restaurant.logo? %}
-                <div class="logo">
-                  <a class="logo__link" href="{{ localized_root_path }}">
-                    {{ restaurant.logo_url | image_tag:'class:logo__image' }}
-                  </a>
-                </div>
-              {% endif %}
-              <div class="restaurant-name">
-                <a class="restaurant-name__link" href="{{ localized_root_path }}">{{ restaurant.name }}</a>
-                {% if restaurant.slogan? %}
-                <div class="slogan">{{ restaurant.slogan }}</div>
-                {% endif %}
+          <div class="identity">
+            {% if restaurant.logo? %}
+              <div class="logo">
+                <a class="logo__link" href="{{ localized_root_path }}">
+                  {{ restaurant.logo_url | image_tag:'class:logo__image' }}
+                </a>
               </div>
-            </div>
-            <div class="grid-item large--one-third">
-              {% if restaurant.phone? %}
-                <div class="phone-number">
-                  <a class="phone-number__link" href="tel:{{ restaurant.phone_uri }}">
-                    <i class="icon-phone"></i> <span class="phone-number__label">{{ restaurant.phone }}</span>
-                  </a>
+            {% endif %}
+            <div class="restaurant-name">
+              <a class="restaurant-name__link" href="{{ localized_root_path }}">
+                {{ restaurant.name }}
+              </a>
+              {% if restaurant.slogan? %}
+                <div class="slogan">
+                  {{ restaurant.slogan }}
                 </div>
               {% endif %}
             </div>
           </div>
+          {% if restaurant.phone? %}
+            <div class="phone-number">
+              <a class="phone-number__link" href="tel:{{ restaurant.phone_uri }}">
+                <i class="icon-phone"></i> <span class="phone-number__label">{{ restaurant.phone }}</span>
+              </a>
+            </div>
+          {% endif %}
         </div>
       </header>
       <nav id="nav" class="main-nav" role="navigation">
