--- a/snippets/menu.liquid
+++ b/snippets/menu.liquid
@@ -14,7 +14,7 @@
   {% endif %}
   {% if menu.summary? %}
     <div class="menu__description">
-      <p>{{ menu.summary }}</p>
+      {{ menu.summary }}
     </div>
   {% endif %}
   {% if menu.foods? %}
