Adjust menu size

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -536,7 +536,7 @@ body {
       .logo__image {
         padding: 1em 0;
         vertical-align: middle;
-        width: 220px;
+        width: 180px;
       }
   .restaurant-name {
     text-align: center;
@@ -582,8 +582,8 @@ body {
 .main-nav__toggle {
   display: none;
   float: right;
-  width: 3.125em;
-  height: 3.1em;
+  width: 3.9em;
+  height: 3.9em;
   text-align: left;
   text-indent: -9999px;
   background-color: $accent-color;
@@ -633,6 +633,7 @@ body {
       display: block;
       height: auto;
       padding: 0.75em 1em;
+      font-size: 1.3em;
       font-weight: 700;
       text-decoration: none;
       &:hover, &:focus {
@@ -1321,7 +1322,13 @@ x:-o-prefocus, .lb-overlay img {
     padding: 1em 0;
     text-align: left;
   }
-
+  .main-nav__toggle { 
+    width: 3.1em;
+    height: 3.1em;
+  }
+  .main-nav__link {
+    font-size: 1em;
+  }
   .menu-child {
     width: 32%;
   }
