Fix FF bug on restaurant name

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -1352,10 +1352,12 @@ x:-o-prefocus, .lb-overlay img {
 
   .identity {
     float: left;
+    width: 65%;
   }
   .phone-number {
     float: right;
     text-align: right;
+    width: 35%;
   }
   
   .main-nav {
