--- a/templates/contacts/form.liquid
+++ b/templates/contacts/form.liquid
@@ -43,8 +43,8 @@
         <span class="contact-item__label">{{ "Horaires :" | t }}</span>
       </p>
       <dl class="opening-days">
-        {% for day in opening_hours %}
-          <meta itemprop="openingHours" content="{{ day.name }} {{ day.shifts }}">
+        {% for day in restaurant.opening_hours %}
+          {{ day.meta_microdata }}
           <dt class="opening-day">
             {{ day.name }}
           </dt>
