fix bug link menus

--- a/templates/menus.liquid
+++ b/templates/menus.liquid
@@ -18,7 +18,7 @@
         <ul class="menu-children">
           {% for child in menu.children %}
             <li class="menu-child">
-              <a href="#menu-{{child.id}}" class="menu-child__link">
+              <a href="{{ menu.url }}#menu-{{child.id}}" class="menu-child__link">
                 {{ child.main_image | custom_image_url: "100x100#" | image_tag: "class:menu-child__image" }}
                 <span class="menu-child__title">{{ child.name}}</span>
               </a>
