add fallback image for menus without image

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -1014,6 +1014,10 @@ legend {
         margin-bottom: .5em;
         vertical-align: middle;
       }
+      .anchor-image {
+        width: 100px;
+        border-radius: 50%;
+      }
       .menu-child__title {
         color: scale-color($accent-color, $saturation: -75%);
         display: block;
