update hamburger icon for navigation - add "Menu" inscription on the top

--- a/snippets/nav.liquid
+++ b/snippets/nav.liquid
@@ -1,4 +1,5 @@
-<a href="#nav" class="main-nav__toggle toggle--open" title="{{ "Ouvrir le menu" | t }}">{{ "Ouvrir le menu" | t }}</a>
+<a href="#nav" class="main-nav__toggle toggle--open" title="{{ "Ouvrir le menu" | t }}">{{ "Menu" | t }}</a>
+<a href="#nav" class="main-nav__toggle-link">Menu</a>
 <a href="#" class="main-nav__toggle toggle--close" title="{{ "Fermer le menu" | t }}">{{ "Fermer le menu" | t }}</a>
 <ul class="main-nav__items">
   {% for link in linklists.navigation-primaire.links %}
