--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -3,7 +3,7 @@
  * Copyright 2014 MH Communication.
  * Author MH Communication @MHCommunication
  * Built with Sass - http://sass-lang.com/
- 
+
  * Some things to know about this file:
     - Sass is compiled on RestoReady's server so you don't need to convert it to CSS yourself
     - The output CSS is compressed and comments are removed
@@ -151,7 +151,7 @@ $bodyFontStack: {{ theme_settings.body-font }};
   @mixin media-aside($side: left) {
     float: $side;
   }
-  
+
   @mixin media-body() {
     @include media;
   }
@@ -592,14 +592,21 @@ body {
   &:after {
     position: absolute;
     border: 2px solid #fff;
-    top: 35%;
-    left: 25%;
-    right: 25%;
+    top: 42%;
+    left: 15%;
+    right: 15%;
     content: '';
   }
   &:after {
     top: 60%;
   }
+}
+.main-nav__toggle-link {
+  position: absolute;
+  right: 7px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
   .toggle--close {
     background-color: $body-color;
@@ -1349,9 +1356,12 @@ x:-o-prefocus, .lb-overlay img {
     padding: 1em 0;
     text-align: left;
   }
-  .main-nav__toggle { 
+  .main-nav__toggle {
     width: 3.1em;
     height: 3.1em;
+  }
+  .main-nav__toggle-link {
+    font-size: .85em;
   }
   .main-nav__link {
     font-size: 1em;
@@ -1393,6 +1403,9 @@ x:-o-prefocus, .lb-overlay img {
   }
     .main-nav__toggle {
       display: none !important;
+    }
+    .main-nav__toggle-link {
+      display: none;
     }
     .main-nav__items {
       display: block;
