remove all @extend mixin

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -109,7 +109,12 @@ $bodyFontStack: {{ theme_settings.body-font }};
   *zoom: 1;
 }
 @mixin clearfix() {
-  @extend .clearfix;
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  *zoom: 1;
 }
 
 @mixin box-shadow($shadow) {
@@ -521,7 +526,7 @@ body {
 }
 
 .page {
-  @extend .clearfix;
+  @include clearfix();
 }
 
 .main-header {
@@ -675,7 +680,8 @@ body {
   margin-bottom: 0;
 }
   .main-sub-nav__item {
-    @extend .main-nav__item;
+    display: block;
+    margin: 0;
     &:not(:last-child) {
       border-bottom: 1px solid scale-color($accent-color, $lightness: +5%);
     }
@@ -684,7 +690,19 @@ body {
     background-color: scale-color($accent-color, $lightness: -15%);
   }
     .main-sub-nav__link {
-      @extend .main-nav__link;
+      color: #fff;
+      display: block;
+      height: auto;
+      padding: 0.75em 1em;
+      font-size: 1.3em;
+      font-weight: 700;
+      text-decoration: none;
+      &:hover, &:focus {
+        background-color: scale-color($accent-color, $lightness: -15%);
+      }
+      &:active {
+        background-color: scale-color($accent-color, $lightness: -30%);
+      }
       font-weight: 400;
       padding-left: 1.5em;
     }
@@ -742,7 +760,11 @@ body {
           font-size: .7em;
         }
           .social__label {
-            @extend .hide-text;
+            height: 1px;
+            width: 1px;
+            position: absolute;
+            overflow: hidden;
+            top: -10px;
           }
 
   .footer__legal {
@@ -917,7 +939,7 @@ legend {
   }
 }
   .opening-days {
-    @extend .clearfix;
+    @include clearfix();
     margin-bottom: 1em;
   }
     .opening-day {
@@ -949,7 +971,8 @@ legend {
     margin-bottom: 1em;
   }
     .map__image {
-      @extend .auto;
+      max-width: 100%;
+      height: auto;
     }
   .address {
     color: $body-color;
@@ -967,7 +990,8 @@ legend {
 
   }
     .menu__image {
-      @extend .auto;
+      max-width: 100%;
+      height: auto;
     }
   .menu__header {
 
@@ -1016,7 +1040,8 @@ legend {
       }
     }
       .menu-child__image {
-        @extend .auto;
+        max-width: 100%;
+        height: auto;
         border-radius: 50%;
         margin-bottom: .5em;
         vertical-align: middle;
@@ -1126,7 +1151,8 @@ legend {
   }
     .gallery__img {
       img {
-        @extend .auto;
+        max-width: 100%;
+        height: auto;
         vertical-align: middle;
       }
     }
